--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-potfolio",
+  "name": "portfolio_v1",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://mohamedezz524.github.io/My-portfolio-v1",
